Wrapping on issue/region descriptions

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1158,6 +1158,11 @@ border-bottom: 1px solid #b1b3B6;
 -moz-box-shadow: 0px 1px 3px rgba(0,0,0,.5);
 box-shadow: 0px 1px 3px rgba(0,0,0,.5);
 }
+img.float {
+  float:left;
+  margin-right:10px;
+  margin-bottom:10px;
+}
 .feature-mast img.featured {
 float:left;
 margin-right:15px;
